--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
         </form>
 
-       <!-- <div class="checkbox">
+       <div class="checkbox">
                 <input type="checkbox" id="checkbox" name="checkbox">Lembrar-me
-        </div>-->
+        </div>
         
         <button type="submit">Entrar</button>
 
