checkbox fix maybe

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
         </form>
 
-       <div class="checkbox">
-                <input type="checkbox" id="checkbox" name="checkbox">Lembrar-me
-        </div>
+       <div class="checkbox-container">
+            <input type="checkbox" name="lembrar-me" id="lembrar-me1" value="Lembrar-me">
+            <label for="lembrar-me1">Lembrar-me</label>
+       </div>
         
         <button type="submit">Entrar</button>
 
