--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
      <div class="center-box">
+        
         <div class="imagem">
-            <img src="images/orkut-logo.png" alt="">
+            <img src="images/orkut-logo.png" id="imagem1" alt="Orkut">
         </div>
 
         <form action="" method="dialog">
