--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,21 @@
 </head>
 <body>
      <div class="center-box">
+        <nav>
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li class="dropdown">
+                    <a href="">Sobre</a>
+    
+                    <div class="dropdown-menu">
+                        <a href="">A empresa</a>
+                        <a href="">Ajuda</a>
+                    </div>
+                </li>            
+            </ul>
+        </nav>
         <div class="imagem">
             <img src="images/orkut-logo.png" alt="">
         </div>
