--- a/cadastro.html
+++ b/cadastro.html
@@ -52,7 +52,9 @@
 
         </form>
         
-        <button type="submit">Cadastrar</button>
+        <div class="div-botao">
+            <button type="submit">Cadastrar</button>
+        </div>
 
         <div Class="links">
             <div class="link1">
