--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <label for="lembrar-me1">Lembrar-me</label>
        </div>
         
-        <button type="submit">Entrar</button>
+       <div class="div-botao">
+            <button type="submit">Cadastrar</button>
+       </div>
 
         <div Class="links">
             <div class="link1">
