--- a/cadastro.html
+++ b/cadastro.html
@@ -12,11 +12,17 @@
         <nav>            
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <li class="dropdown">
+                        <a href="">Editar conta</a>
+                        <div class="dropdown-menu">
+                            <a href="">Editar</a>
+                            <a href="">Excluir</a>
+                            <a href="">Sair</a>
+                        </div>
+                    </li>
                 </li>
                 <li class="dropdown">
-                    <a href="">Sobre</a>
-    
+                    <a href="">Sobre</a>    
                     <div class="dropdown-menu">
                         <a href="">A empresa</a>
                         <a href="">Ajuda</a>
@@ -58,7 +64,9 @@
 
         <div Class="links">
             <div class="link1">
-                <a href="index.html">Voltar ao Login</a>    
+                <label for="link-home">Já tem conta?
+                    <a href="index.html" name="link-home">Entrar</a>    
+                </label>
             </div>            
         </div>
 
