--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Login</title>
+    <link rel="shortcut icon" href="images/Orkut_Logo_2.png" type="image/x-icon">
+    <title>Orkut - Cadastro</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
