--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 <body>
      <div class="center-box">
+        <nav>            
+            <ul>
+                <li class="dropdown">
+                    <a href="">Sobre</a>    
+                    <div class="dropdown-menu">
+                        <a href="">A empresa</a>
+                        <a href="">Ajuda</a>
+                    </div>
+                </li>            
+            </ul>
+        </nav>
         
         <div class="imagem">
             <img src="images/orkut-logo.png" id="imagem1" alt="Orkut">
@@ -40,7 +51,7 @@
 
         <div Class="links">
             <div class="link1">
-                <a href="#">Esqueci minha senha</a>    
+                <a href="recuperar-senha.html">Esqueci minha senha</a>    
             </div>
             <div class="link1">
                 <a href="cadastro.html">Cadastrar-se</a>
